@@ -2,13 +2,13 @@ package com.home.bus.utils;
 
 
 import org.apache.tomcat.util.codec.binary.Base64;
-import sun.misc.BASE64Decoder;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import javax.crypto.Cipher;
-import javax.crypto.KeyGenerator;
-import javax.crypto.SecretKey;
 import javax.crypto.spec.SecretKeySpec;
-import java.security.SecureRandom;
+
+
 
 /**
  * @Author: xu.dm
@@ -16,43 +16,35 @@ import java.security.SecureRandom;
  * @Description:
  */
 public class AesUtils {
-
     private static final String ALGORITHMSTR = "AES/ECB/PKCS5Padding";
 
-    private static String base64Encode(byte[] bytes) {
-        return Base64.encodeBase64String(bytes);
+    public static String encrypt(String content, String key) {
+        try {
+            byte[] raw = key.getBytes();  //获得密码的字节数组
+            SecretKeySpec skey = new SecretKeySpec(raw, "AES"); //根据密码生成AES密钥
+            Cipher cipher = Cipher.getInstance(ALGORITHMSTR);  //根据指定算法ALGORITHM自成密码器
+            cipher.init(Cipher.ENCRYPT_MODE, skey); //初始化密码器，第一个参数为加密(ENCRYPT_MODE)或者解密(DECRYPT_MODE)操作，第二个参数为生成的AES密钥
+            byte [] byte_content = content.getBytes("utf-8"); //获取加密内容的字节数组(设置为utf-8)不然内容中如果有中文和英文混合中文就会解密为乱码
+            byte [] encode_content = cipher.doFinal(byte_content); //密码器加密数据
+            return Base64.encodeBase64String(encode_content); //将加密后的数据转换为字符串返回
+        } catch (Exception e) {
+            e.printStackTrace();
+            return null;
+        }
     }
 
-    private static byte[] base64Decode(String base64Code) throws Exception {
-        return new BASE64Decoder().decodeBuffer(base64Code);
+    public static String decrypt(String encryptStr, String decryptKey) {
+        try {
+            byte[] raw = decryptKey.getBytes();  //获得密码的字节数组
+            SecretKeySpec skey = new SecretKeySpec(raw, "AES"); //根据密码生成AES密钥
+            Cipher cipher = Cipher.getInstance(ALGORITHMSTR);  //根据指定算法ALGORITHM自成密码器
+            cipher.init(Cipher.DECRYPT_MODE, skey); //初始化密码器，第一个参数为加密(ENCRYPT_MODE)或者解密(DECRYPT_MODE)操作，第二个参数为生成的AES密钥
+            byte [] encode_content = Base64.decodeBase64(encryptStr); //把密文字符串转回密文字节数组
+            byte [] byte_content = cipher.doFinal(encode_content); //密码器解密数据
+            return new String(byte_content,"utf-8"); //将解密后的数据转换为字符串返回
+        } catch (Exception e) {
+            e.printStackTrace();
+            return null;
+        }
     }
-
-    private static byte[] aesEncryptToBytes(String content, String encryptKey) throws Exception {
-        KeyGenerator kgen = KeyGenerator.getInstance("AES");
-        kgen.init(128);
-        Cipher cipher = Cipher.getInstance(ALGORITHMSTR);
-        cipher.init(Cipher.ENCRYPT_MODE, new SecretKeySpec(encryptKey.getBytes(), "AES"));
-
-        return cipher.doFinal(content.getBytes("utf-8"));
-    }
-
-    public static String encrypt(String content, String encryptKey) throws Exception {
-        return base64Encode(aesEncryptToBytes(content, encryptKey));
-    }
-
-    private static String aesDecryptByBytes(byte[] encryptBytes, String decryptKey) throws Exception {
-        KeyGenerator kgen = KeyGenerator.getInstance("AES");
-        kgen.init(128);
-
-        Cipher cipher = Cipher.getInstance(ALGORITHMSTR);
-        cipher.init(Cipher.DECRYPT_MODE, new SecretKeySpec(decryptKey.getBytes(), "AES"));
-        byte[] decryptBytes = cipher.doFinal(encryptBytes);
-
-        return new String(decryptBytes);
-    }
-
-    public static String decrypt(String encryptStr, String decryptKey) throws Exception {
-        return aesDecryptByBytes(base64Decode(encryptStr), decryptKey);
-    }
-
 }
